# image_tools

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: AlertDialog.svelte  CompressPanel.svelte  ConfirmDialog.svelte  FileListDialog.svelte  ProgressPanel.svelte  RenamePanel.svelte  ShrinkPanel.svelte  WatermarkDialog.svelte
src/stores/: compress.js  files.js  format.js  progress.js  rename.js  shrink.js  watermark.js
