[package]
name = "image_tools"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
image = "0.25"
tokio = { version = "1", features = ["full"] }
rayon = "1.10"
fast_image_resize = "5"
mozjpeg = { version = "0.10", default-features = false, features = ["with_simd"] }
tauri-plugin-store = "2.4"
imageproc = "0.26"
ab_glyph = "0.2"
chrono = { version = "0.4", features = ["clock"] }
once_cell = "1.21"
